--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <li>
             <a href="real-time-database.html">Real Time Database</a>
         </li>
-
+        <li>
+            <a href="authentication.html">Autenticação</a>
+        </li>
     </ul>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
